--- a/Predictions/final_results.html
+++ b/Predictions/final_results.html
@@ -31,7 +31,7 @@
     </head><body>
     <h1>Predictor League - Final Results</h1>
     Tables are pulled directly from the bbc sports website
-    <h2>Leaderboard</h2><table><thead><tr><th>Player</th><th>Premier League</th><th>Championship</th><th>Total</th></tr></thead><tbody><tr><td>Cai</td><td>69</td><td>68</td><td><strong>137</strong></td></tr><tr><td>Tom</td><td>61</td><td>59</td><td><strong>120</strong></td></tr><tr><td>Cathal</td><td>50</td><td>61</td><td><strong>111</strong></td></tr><tr><td>Lewis</td><td>45</td><td>63</td><td><strong>108</strong></td></tr><tr><td>Ben</td><td>45</td><td>56</td><td><strong>101</strong></td></tr></tbody></table>
+    <h2>Leaderboard</h2><table><thead><tr><th>Player</th><th>Premier League</th><th>Championship</th><th>Total</th></tr></thead><tbody><tr><td>Cai</td><td>69</td><td>68</td><td><strong>137</strong></td></tr><tr><td>AB</td><td>52</td><td>66</td><td><strong>118</strong></td></tr><tr><td>Tom</td><td>53</td><td>59</td><td><strong>112</strong></td></tr><tr><td>Cathal</td><td>50</td><td>61</td><td><strong>111</strong></td></tr><tr><td>Lewis</td><td>46</td><td>63</td><td><strong>109</strong></td></tr><tr><td>Ben</td><td>45</td><td>56</td><td><strong>101</strong></td></tr></tbody></table>
 <h2>Premier League - Actual Table</h2>
 <table><thead><tr><th>Position</th><th>Team</th><th>Points</th></tr></thead><tbody>
 <tr><td>1</td><td>AFC Bournemouth</td><td>0</td></tr>
@@ -82,29 +82,29 @@
 <tr><td>23</td><td>Derby County</td><td>0</td></tr>
 <tr><td>24</td><td>Sheffield United</td><td>0</td></tr>
 </tbody></table>
-<h2>Predictions & Scores for Lewis (Total: 108)</h2>
-<h3>Premier League (Score: 45)</h3>
+<h2>Predictions & Scores for Lewis (Total: 109)</h2>
+<h3>Premier League (Score: 46)</h3>
 <table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
 <tr><td>1</td><td>Manchester City</td><td>13</td><td>0</td><td class='score'>2</td><td>2</td></tr>
 <tr><td>2</td><td>Liverpool</td><td>12</td><td>0</td><td class='score'>2</td><td>4</td></tr>
-<tr><td>3</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>4</td><td>8</td></tr>
-<tr><td>4</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>2</td><td>10</td></tr>
-<tr><td>5</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td><td>12</td></tr>
-<tr><td>6</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td><td>14</td></tr>
-<tr><td>7</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td><td>16</td></tr>
-<tr><td>8</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td><td>18</td></tr>
-<tr><td>9</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>4</td><td>22</td></tr>
-<tr><td>10</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td><td>24</td></tr>
-<tr><td>11</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>3</td><td>27</td></tr>
-<tr><td>12</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>2</td><td>29</td></tr>
-<tr><td>13</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td><td>31</td></tr>
-<tr><td>14</td><td>Everton</td><td>9</td><td>0</td><td class='score'>2</td><td>33</td></tr>
-<tr><td>15</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>2</td><td>35</td></tr>
-<tr><td>16</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td><td>37</td></tr>
-<tr><td>17</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td><td>39</td></tr>
-<tr><td>18</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td><td>41</td></tr>
-<tr><td>19</td><td>Brentford</td><td>4</td><td>0</td><td class='score'>2</td><td>43</td></tr>
-<tr><td>20</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>2</td><td>45</td></tr>
+<tr><td>3</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>2</td><td>6</td></tr>
+<tr><td>4</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>3</td><td>9</td></tr>
+<tr><td>5</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td><td>11</td></tr>
+<tr><td>6</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td><td>13</td></tr>
+<tr><td>7</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td><td>15</td></tr>
+<tr><td>8</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td><td>17</td></tr>
+<tr><td>9</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td><td>19</td></tr>
+<tr><td>10</td><td>Everton</td><td>9</td><td>0</td><td class='score'>4</td><td>23</td></tr>
+<tr><td>11</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>3</td><td>26</td></tr>
+<tr><td>12</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>3</td><td>29</td></tr>
+<tr><td>13</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>3</td><td>32</td></tr>
+<tr><td>14</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td><td>34</td></tr>
+<tr><td>15</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>2</td><td>36</td></tr>
+<tr><td>16</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td><td>38</td></tr>
+<tr><td>17</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td><td>40</td></tr>
+<tr><td>18</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td><td>42</td></tr>
+<tr><td>19</td><td>Brentford</td><td>4</td><td>0</td><td class='score'>2</td><td>44</td></tr>
+<tr><td>20</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>2</td><td>46</td></tr>
 </tbody></table>
 <h3>Championship (Score: 63)</h3>
 <table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
@@ -184,29 +184,29 @@
 <tr><td>23</td><td>Queens Park Rangers</td><td>13</td><td>1</td><td class='score'>2</td><td>66</td></tr>
 <tr><td>24</td><td>Sheffield Wednesday</td><td>16</td><td>0</td><td class='score'>2</td><td>68</td></tr>
 </tbody></table>
-<h2>Predictions & Scores for Tom (Total: 120)</h2>
-<h3>Premier League (Score: 61)</h3>
+<h2>Predictions & Scores for Tom (Total: 112)</h2>
+<h3>Premier League (Score: 53)</h3>
 <table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
-<tr><td>1</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>2</td><td>2</td></tr>
-<tr><td>2</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>10</td><td>12</td></tr>
-<tr><td>3</td><td>Liverpool</td><td>12</td><td>0</td><td class='score'>2</td><td>14</td></tr>
-<tr><td>4</td><td>Manchester City</td><td>13</td><td>0</td><td class='score'>2</td><td>16</td></tr>
-<tr><td>5</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td><td>18</td></tr>
-<tr><td>6</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td><td>20</td></tr>
-<tr><td>7</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td><td>22</td></tr>
-<tr><td>8</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td><td>24</td></tr>
-<tr><td>9</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>4</td><td>28</td></tr>
-<tr><td>10</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td><td>30</td></tr>
-<tr><td>11</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td><td>32</td></tr>
-<tr><td>12</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>3</td><td>35</td></tr>
-<tr><td>13</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td><td>37</td></tr>
-<tr><td>14</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>3</td><td>40</td></tr>
-<tr><td>15</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>3</td><td>43</td></tr>
-<tr><td>16</td><td>Everton</td><td>9</td><td>0</td><td class='score'>2</td><td>45</td></tr>
-<tr><td>17</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td><td>47</td></tr>
+<tr><td>1</td><td>Liverpool</td><td>12</td><td>0</td><td class='score'>2</td><td>2</td></tr>
+<tr><td>2</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>2</td><td>4</td></tr>
+<tr><td>3</td><td>Manchester City</td><td>13</td><td>0</td><td class='score'>2</td><td>6</td></tr>
+<tr><td>4</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>3</td><td>9</td></tr>
+<tr><td>5</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td><td>11</td></tr>
+<tr><td>6</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td><td>13</td></tr>
+<tr><td>7</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td><td>15</td></tr>
+<tr><td>8</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td><td>17</td></tr>
+<tr><td>9</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td><td>19</td></tr>
+<tr><td>10</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>10</td><td>29</td></tr>
+<tr><td>11</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>3</td><td>32</td></tr>
+<tr><td>12</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td><td>34</td></tr>
+<tr><td>13</td><td>Everton</td><td>9</td><td>0</td><td class='score'>2</td><td>36</td></tr>
+<tr><td>14</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>3</td><td>39</td></tr>
+<tr><td>15</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>2</td><td>41</td></tr>
+<tr><td>16</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>4</td><td>45</td></tr>
+<tr><td>17</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td><td>47</td></tr>
 <tr><td>18</td><td>Brentford</td><td>4</td><td>0</td><td class='score'>2</td><td>49</td></tr>
-<tr><td>19</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>10</td><td>59</td></tr>
-<tr><td>20</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td><td>61</td></tr>
+<tr><td>19</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td><td>51</td></tr>
+<tr><td>20</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td><td>53</td></tr>
 </tbody></table>
 <h3>Championship (Score: 59)</h3>
 <table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
@@ -336,5 +336,56 @@
 <tr><td>22</td><td>Sheffield Wednesday</td><td>16</td><td>0</td><td class='score'>2</td><td>57</td></tr>
 <tr><td>23</td><td>Preston North End</td><td>11</td><td>1</td><td class='score'>2</td><td>59</td></tr>
 <tr><td>24</td><td>Oxford United</td><td>20</td><td>0</td><td class='score'>2</td><td>61</td></tr>
+</tbody></table>
+<h2>Predictions & Scores for AB (Total: 118)</h2>
+<h3>Premier League (Score: 52)</h3>
+<table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
+<tr><td>1</td><td>Arsenal</td><td>2</td><td>0</td><td class='score'>4</td><td>4</td></tr>
+<tr><td>2</td><td>Liverpool</td><td>12</td><td>0</td><td class='score'>2</td><td>6</td></tr>
+<tr><td>3</td><td>Manchester City</td><td>13</td><td>0</td><td class='score'>2</td><td>8</td></tr>
+<tr><td>4</td><td>Chelsea</td><td>7</td><td>0</td><td class='score'>2</td><td>10</td></tr>
+<tr><td>5</td><td>Aston Villa</td><td>3</td><td>0</td><td class='score'>2</td><td>12</td></tr>
+<tr><td>6</td><td>Manchester United</td><td>14</td><td>0</td><td class='score'>2</td><td>14</td></tr>
+<tr><td>7</td><td>Newcastle United</td><td>15</td><td>0</td><td class='score'>2</td><td>16</td></tr>
+<tr><td>8</td><td>Tottenham Hotspur</td><td>18</td><td>0</td><td class='score'>2</td><td>18</td></tr>
+<tr><td>9</td><td>Nottingham Forest</td><td>16</td><td>0</td><td class='score'>2</td><td>20</td></tr>
+<tr><td>10</td><td>Brighton & Hove Albion</td><td>5</td><td>0</td><td class='score'>2</td><td>22</td></tr>
+<tr><td>11</td><td>Crystal Palace</td><td>8</td><td>0</td><td class='score'>3</td><td>25</td></tr>
+<tr><td>12</td><td>Everton</td><td>9</td><td>0</td><td class='score'>3</td><td>28</td></tr>
+<tr><td>13</td><td>Fulham</td><td>10</td><td>0</td><td class='score'>2</td><td>30</td></tr>
+<tr><td>14</td><td>AFC Bournemouth</td><td>1</td><td>0</td><td class='score'>2</td><td>32</td></tr>
+<tr><td>15</td><td>West Ham United</td><td>19</td><td>0</td><td class='score'>2</td><td>34</td></tr>
+<tr><td>16</td><td>Wolverhampton Wanderers</td><td>20</td><td>0</td><td class='score'>2</td><td>36</td></tr>
+<tr><td>17</td><td>Sunderland</td><td>17</td><td>0</td><td class='score'>10</td><td>46</td></tr>
+<tr><td>18</td><td>Brentford</td><td>4</td><td>0</td><td class='score'>2</td><td>48</td></tr>
+<tr><td>19</td><td>Leeds United</td><td>11</td><td>0</td><td class='score'>2</td><td>50</td></tr>
+<tr><td>20</td><td>Burnley</td><td>6</td><td>0</td><td class='score'>2</td><td>52</td></tr>
+</tbody></table>
+<h3>Championship (Score: 66)</h3>
+<table><thead><tr><th>Predicted</th><th>Team</th><th>Actual</th><th>Points Difference</th><th>Score</th><th>Running Total</th></tr></thead><tbody>
+<tr><td>1</td><td>Sheffield United</td><td>24</td><td>3</td><td class='score'>2</td><td>2</td></tr>
+<tr><td>2</td><td>Leicester City</td><td>4</td><td>0</td><td class='score'>2</td><td>4</td></tr>
+<tr><td>3</td><td>Southampton</td><td>5</td><td>0</td><td class='score'>3</td><td>7</td></tr>
+<tr><td>4</td><td>Coventry City</td><td>14</td><td>2</td><td class='score'>2</td><td>9</td></tr>
+<tr><td>5</td><td>Ipswich Town</td><td>10</td><td>2</td><td class='score'>2</td><td>11</td></tr>
+<tr><td>6</td><td>West Bromwich Albion</td><td>9</td><td>0</td><td class='score'>2</td><td>13</td></tr>
+<tr><td>7</td><td>Millwall</td><td>3</td><td>0</td><td class='score'>2</td><td>15</td></tr>
+<tr><td>8</td><td>Middlesbrough</td><td>8</td><td>0</td><td class='score'>10</td><td>25</td></tr>
+<tr><td>9</td><td>Bristol City</td><td>1</td><td>0</td><td class='score'>2</td><td>27</td></tr>
+<tr><td>10</td><td>Birmingham City</td><td>12</td><td>0</td><td class='score'>3</td><td>30</td></tr>
+<tr><td>11</td><td>Wrexham</td><td>17</td><td>1</td><td class='score'>2</td><td>32</td></tr>
+<tr><td>12</td><td>Norwich City</td><td>18</td><td>1</td><td class='score'>2</td><td>34</td></tr>
+<tr><td>13</td><td>Blackburn Rovers</td><td>19</td><td>1</td><td class='score'>2</td><td>36</td></tr>
+<tr><td>14</td><td>Watford</td><td>22</td><td>1</td><td class='score'>2</td><td>38</td></tr>
+<tr><td>15</td><td>Portsmouth</td><td>6</td><td>2</td><td class='score'>2</td><td>40</td></tr>
+<tr><td>16</td><td>Swansea City</td><td>21</td><td>0</td><td class='score'>2</td><td>42</td></tr>
+<tr><td>17</td><td>Stoke City</td><td>2</td><td>3</td><td class='score'>2</td><td>44</td></tr>
+<tr><td>18</td><td>Queens Park Rangers</td><td>13</td><td>1</td><td class='score'>2</td><td>46</td></tr>
+<tr><td>19</td><td>Hull City</td><td>15</td><td>1</td><td class='score'>2</td><td>48</td></tr>
+<tr><td>20</td><td>Sheffield Wednesday</td><td>16</td><td>0</td><td class='score'>2</td><td>50</td></tr>
+<tr><td>21</td><td>Preston North End</td><td>11</td><td>1</td><td class='score'>2</td><td>52</td></tr>
+<tr><td>22</td><td>Charlton Athletic</td><td>7</td><td>3</td><td class='score'>2</td><td>54</td></tr>
+<tr><td>23</td><td>Derby County</td><td>23</td><td>0</td><td class='score'>10</td><td>64</td></tr>
+<tr><td>24</td><td>Oxford United</td><td>20</td><td>0</td><td class='score'>2</td><td>66</td></tr>
 </tbody></table>
 </body></html>
