--- a/WeeklyGame/WeeklyPredictions_Woking.html
+++ b/WeeklyGame/WeeklyPredictions_Woking.html
@@ -216,7 +216,7 @@
                     // CHANGE THIS IF RULES CHANGE!!!!
                     const allCorrect = (correctCount === weekPreds.length);
                     const weekPoints = allCorrect ? weekPreds.length : 0;
-                    totalPoints += weekPoints;
+                    totalPoints += correctCount;
 
                     nextAllowed = allCorrect ? weekPreds.length + 1 : 1;
                     nextAllowed = Math.min(nextAllowed, 10);
