--- a/WeeklyGame/WeeklyPredictions_Woking.html
+++ b/WeeklyGame/WeeklyPredictions_Woking.html
@@ -212,11 +212,11 @@
                     const correctCount = weekPreds.filter(p => p.Outcome === "correct").length;
                     const wrongCount = weekPreds.length - correctCount;
 
-                    // Scoring rules: points only if ALL correct
+                    // Scoring rules: points if any predicted game is correct
                     // CHANGE THIS IF RULES CHANGE!!!!
                     const allCorrect = (correctCount === weekPreds.length);
                     const weekPoints = allCorrect ? weekPreds.length : 0;
-                    totalPoints += correctCount;
+                    totalPoints += correctCount; // Change here: allCorrect
 
                     nextAllowed = allCorrect ? weekPreds.length + 1 : 1;
                     nextAllowed = Math.min(nextAllowed, 10);
