Bug Fix: Difference between "points" and "total points"

--- a/WeeklyGame/WeeklyPredictions_Bristol.html
+++ b/WeeklyGame/WeeklyPredictions_Bristol.html
@@ -226,7 +226,7 @@
                     indivHTML += `<tr>
                         <td>${gw}</td>
                         <td>${icons}</td>
-                        <td>${weekPoints}</td>
+                        <td>${correctCount}</td>
                         <td>${nextAllowed}</td>
                     </tr>`;
 
