--- a/WeeklyGame/WeeklyPredictions_Woking.html
+++ b/WeeklyGame/WeeklyPredictions_Woking.html
@@ -228,7 +228,7 @@
                     indivHTML += `<tr>
                         <td>${gw}</td>
                         <td>${icons}</td>
-                        <td>${weekPoints}</td>
+                        <td>${correctCount}</td>
                         <td>${nextAllowed}</td>
                     </tr>`;
 
