Update for Weekly games and including my CV

--- a/index.html
+++ b/index.html
@@ -122,8 +122,15 @@
             Jets from 3CR 14 and 3CR 9
             </a>
           </li>
-          <li> 
+          <li>
             Papers:
+          </li>
+          <li> 
+            CV:
+            <a data-value="My CV is available here"
+            href="Images/CV_TH-2.pdf">
+          My CV is available here
+          </a>
           </li>
         </ul>
       </p>
